--- a/versione-alternativa/index.html
+++ b/versione-alternativa/index.html
@@ -32,7 +32,7 @@
                                 <span v-if="task.done === true" class="text-decoration-line-through" @click="changeDone(index)"> {{task.text}}</span> 
                                 <span v-else @click="changeDone(index)" > {{task.text}}</span>
                                 <i class="fa-solid fa-check" @click="changeDone(index)"></i> 
-                                <i class="px-2 fa-solid fa-circle-xmark" @click="trashedTask(index)"></i>
+                                <i class="px-2 fa-solid fa-trash" @click="trashedTask(index)"></i>
                                 <hr class="mt-3 me-4">
                             </li>
                         
